todoyu portal extension changelog

portal 1.1.2 - not released yet
	* Translation: Polish

portal 1.1.1 - 2011-09-15
	* Minor cleanups

portal 1.1.0 - 2011-06-17
	* Feature: Added init-rights-check for controller
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name